# clickstreamtoclickhouse

./: .gitignore  README.rst  pyproject.toml
seghouse/: __main__.py  app.py  logging.conf
seghouse/config/: configuration.py  data_type.py  default_table_structure.py  event_fields.py
seghouse/jobs/: send_to_warehouse.py
seghouse/util/: aws_wrapper.py  dataframe_util.py  json_util.py
seghouse/warehouse/: clickhouse.py  factory.py  warehouse.py
